==> autosportlabs/RaceCapture-Pro_firmware/platform/mk2/libs/FreeRTOSV7.6.0/FreeRTOS/Source/portable/GCC/MSP430F449/port.c <==
#include <stdlib.h>
#include <signal.h>
#include "FreeRTOS.h"
#include "task.h"
#define portACLK_FREQUENCY_HZ			( ( portTickType ) 32768 )
#define portINITIAL_CRITICAL_NESTING	( ( unsigned short ) 10 )
#define portFLAGS_INT_ENABLED	( ( portSTACK_TYPE ) 0x08 )
#define portSAVE_CONTEXT()									\
	asm volatile (	"push	r4						\n\t"	\
					"push	r5						\n\t"	\
					"push	r6						\n\t"	\
					"push	r7						\n\t"	\
					"push	r8						\n\t"	\
					"push	r9						\n\t"	\
					"push	r10						\n\t"	\
					"push	r11						\n\t"	\
					"push	r12						\n\t"	\
					"push	r13						\n\t"	\
					"push	r14						\n\t"	\
					"push	r15						\n\t"	\
					"mov.w	usCriticalNesting, r14	\n\t"	\
					"push	r14						\n\t"	\
					"mov.w	pxCurrentTCB, r12		\n\t"	\
					"mov.w	r1, @r12				\n\t"	\
				);
#define portRESTORE_CONTEXT()								\
	asm volatile (	"mov.w	pxCurrentTCB, r12		\n\t"	\
					"mov.w	@r12, r1				\n\t"	\
					"pop	r15						\n\t"	\
					"mov.w	r15, usCriticalNesting	\n\t"	\
					"pop	r15						\n\t"	\
					"pop	r14						\n\t"	\
					"pop	r13						\n\t"	\
					"pop	r12						\n\t"	\
					"pop	r11						\n\t"	\
					"pop	r10						\n\t"	\
					"pop	r9						\n\t"	\
					"pop	r8						\n\t"	\
					"pop	r7						\n\t"	\
					"pop	r6						\n\t"	\
					"pop	r5						\n\t"	\
					"pop	r4						\n\t"	\
					"bic	#(0xf0),0(r1)			\n\t"	\
					"reti							\n\t"	\
				);

portSTACK_TYPE *pxPortInitialiseStack( portSTACK_TYPE *pxTopOfStack, pdTASK_CODE pxCode, void *pvParameters )
{
        /*
        	Place a few bytes of known values on the bottom of the stack.
        	This is just useful for debugging and can be included if required.

        	*pxTopOfStack = ( portSTACK_TYPE ) 0x1111;
        	pxTopOfStack--;
        	*pxTopOfStack = ( portSTACK_TYPE ) 0x2222;
        	pxTopOfStack--;
        	*pxTopOfStack = ( portSTACK_TYPE ) 0x3333;
        	pxTopOfStack--;
        */

        /* The msp430 automatically pushes the PC then SR onto the stack before
        executing an ISR.  We want the stack to look just as if this has happened
        so place a pointer to the start of the task on the stack first - followed
        by the flags we want the task to use when it starts up. */
        *pxTopOfStack = ( portSTACK_TYPE ) pxCode;
        pxTopOfStack--;
        *pxTopOfStack = portFLAGS_INT_ENABLED;
        pxTopOfStack--;

        /* Next the general purpose registers. */
        *pxTopOfStack = ( portSTACK_TYPE ) 0x4444;
        pxTopOfStack--;
        *pxTopOfStack = ( portSTACK_TYPE ) 0x5555;
        pxTopOfStack--;
        *pxTopOfStack = ( portSTACK_TYPE ) 0x6666;
        pxTopOfStack--;
        *pxTopOfStack = ( portSTACK_TYPE ) 0x7777;
        pxTopOfStack--;
        *pxTopOfStack = ( portSTACK_TYPE ) 0x8888;
        pxTopOfStack--;
        *pxTopOfStack = ( portSTACK_TYPE ) 0x9999;
        pxTopOfStack--;
        *pxTopOfStack = ( portSTACK_TYPE ) 0xaaaa;
        pxTopOfStack--;
        *pxTopOfStack = ( portSTACK_TYPE ) 0xbbbb;
        pxTopOfStack--;
        *pxTopOfStack = ( portSTACK_TYPE ) 0xcccc;
        pxTopOfStack--;
        *pxTopOfStack = ( portSTACK_TYPE ) 0xdddd;
        pxTopOfStack--;
        *pxTopOfStack = ( portSTACK_TYPE ) 0xeeee;
        pxTopOfStack--;

        /* When the task starts is will expect to find the function parameter in
        R15. */
        *pxTopOfStack = ( portSTACK_TYPE ) pvParameters;
        pxTopOfStack--;

        /* The code generated by the mspgcc compiler does not maintain separate
        stack and frame pointers. The portENTER_CRITICAL macro cannot therefore
        use the stack as per other ports.  Instead a variable is used to keep
        track of the critical section nesting.  This variable has to be stored
        as part of the task context and is initially set to zero. */
        *pxTopOfStack = ( portSTACK_TYPE ) portNO_CRITICAL_SECTION_NESTING;

        /* Return a pointer to the top of the stack we have generated so this can
        be stored in the task control block for the task. */
        return pxTopOfStack;
}

static void prvSetupTimerInterrupt( void )
{
        /* Ensure the timer is stopped. */
        TACTL = 0;

        /* Run the timer of the ACLK. */
        TACTL = TASSEL_1;

        /* Clear everything to start with. */
        TACTL |= TACLR;

        /* Set the compare match value according to the tick rate we want. */
        TACCR0 = portACLK_FREQUENCY_HZ / configTICK_RATE_HZ;

        /* Enable the interrupts. */
        TACCTL0 = CCIE;

        /* Start up clean. */
        TACTL |= TACLR;

        /* Up mode. */
        TACTL |= MC_1;
}
