==> autosportlabs/RaceCapture-Pro_firmware/stm32_base/libs/FreeRTOSV7.6.0/FreeRTOS/Source/portable/MPLAB/PIC18F/port.c <==
#include "FreeRTOS.h"
#include "task.h"
#include "timers.h"
#define portTIMER_FOSC_SCALE			( ( unsigned long ) 4 )
#define portINITAL_INTERRUPT_STATE			0xc0
#define portGLOBAL_INTERRUPT_FLAG			0x80
#define portINTERRUPTS_UNCHANGED			0x00
#define portCOMPILER_MANAGED_MEMORY_SIZE	( ( unsigned char ) 0x13 )
#define portBIT_SET		( ( unsigned char ) 1 )
#define portBIT_CLEAR	( ( unsigned char ) 0 )

portSTACK_TYPE *pxPortInitialiseStack( portSTACK_TYPE *pxTopOfStack, pdTASK_CODE pxCode, void *pvParameters )
{
    unsigned long ulAddress;
    unsigned char ucBlock;

    /* Place a few bytes of known values on the bottom of the stack.
    This is just useful for debugging. */

    *pxTopOfStack = 0x11;
    pxTopOfStack++;
    *pxTopOfStack = 0x22;
    pxTopOfStack++;
    *pxTopOfStack = 0x33;
    pxTopOfStack++;


    /* Simulate how the stack would look after a call to vPortYield() generated
    by the compiler.

    First store the function parameters.  This is where the task will expect to
    find them when it starts running. */
    ulAddress = ( unsigned long ) pvParameters;
    *pxTopOfStack = ( portSTACK_TYPE ) ( ulAddress & ( unsigned long ) 0x00ff );
    pxTopOfStack++;

    ulAddress >>= 8;
    *pxTopOfStack = ( portSTACK_TYPE ) ( ulAddress & ( unsigned long ) 0x00ff );
    pxTopOfStack++;

    /* Next we just leave a space.  When a context is saved the stack pointer
    is incremented before it is used so as not to corrupt whatever the stack
    pointer is actually pointing to.  This is especially necessary during
    function epilogue code generated by the compiler. */
    *pxTopOfStack = 0x44;
    pxTopOfStack++;

    /* Next are all the registers that form part of the task context. */

    *pxTopOfStack = ( portSTACK_TYPE ) 0x66; /* WREG. */
    pxTopOfStack++;

    *pxTopOfStack = ( portSTACK_TYPE ) 0xcc; /* Status. */
    pxTopOfStack++;

    /* INTCON is saved with interrupts enabled. */
    *pxTopOfStack = ( portSTACK_TYPE ) portINITAL_INTERRUPT_STATE; /* INTCON */
    pxTopOfStack++;

    *pxTopOfStack = ( portSTACK_TYPE ) 0x11; /* BSR. */
    pxTopOfStack++;

    *pxTopOfStack = ( portSTACK_TYPE ) 0x22; /* FSR2L. */
    pxTopOfStack++;

    *pxTopOfStack = ( portSTACK_TYPE ) 0x33; /* FSR2H. */
    pxTopOfStack++;

    *pxTopOfStack = ( portSTACK_TYPE ) 0x44; /* FSR0L. */
    pxTopOfStack++;

    *pxTopOfStack = ( portSTACK_TYPE ) 0x55; /* FSR0H. */
    pxTopOfStack++;

    *pxTopOfStack = ( portSTACK_TYPE ) 0x66; /* TABLAT. */
    pxTopOfStack++;

    *pxTopOfStack = ( portSTACK_TYPE ) 0x00; /* TBLPTRU. */
    pxTopOfStack++;

    *pxTopOfStack = ( portSTACK_TYPE ) 0x88; /* TBLPTRUH. */
    pxTopOfStack++;

    *pxTopOfStack = ( portSTACK_TYPE ) 0x99; /* TBLPTRUL. */
    pxTopOfStack++;

    *pxTopOfStack = ( portSTACK_TYPE ) 0xaa; /* PRODH. */
    pxTopOfStack++;

    *pxTopOfStack = ( portSTACK_TYPE ) 0xbb; /* PRODL. */
    pxTopOfStack++;

    *pxTopOfStack = ( portSTACK_TYPE ) 0x00; /* PCLATU. */
    pxTopOfStack++;

    *pxTopOfStack = ( portSTACK_TYPE ) 0x00; /* PCLATH. */
    pxTopOfStack++;

    /* Next the .tmpdata and MATH_DATA sections. */
    for( ucBlock = 0; ucBlock <= portCOMPILER_MANAGED_MEMORY_SIZE; ucBlock++ ) {
        *pxTopOfStack = ( portSTACK_TYPE ) ucBlock;
        *pxTopOfStack++;
    }

    /* Store the top of the global data section. */
    *pxTopOfStack = ( portSTACK_TYPE ) portCOMPILER_MANAGED_MEMORY_SIZE; /* Low. */
    pxTopOfStack++;

    *pxTopOfStack = ( portSTACK_TYPE ) 0x00; /* High. */
    pxTopOfStack++;

    /* The only function return address so far is the address of the
    task. */
    ulAddress = ( unsigned long ) pxCode;

    /* TOS low. */
    *pxTopOfStack = ( portSTACK_TYPE ) ( ulAddress & ( unsigned long ) 0x00ff );
    pxTopOfStack++;
    ulAddress >>= 8;

    /* TOS high. */
    *pxTopOfStack = ( portSTACK_TYPE ) ( ulAddress & ( unsigned long ) 0x00ff );
    pxTopOfStack++;
    ulAddress >>= 8;

    /* TOS even higher. */
    *pxTopOfStack = ( portSTACK_TYPE ) ( ulAddress & ( unsigned long ) 0x00ff );
    pxTopOfStack++;

    /* Store the number of return addresses on the hardware stack - so far only
    the address of the task entry point. */
    *pxTopOfStack = ( portSTACK_TYPE ) 1;
    pxTopOfStack++;

    return pxTopOfStack;
}

static void prvSetupTimerInterrupt( void )
{
    const unsigned long ulConstCompareValue = ( ( configCPU_CLOCK_HZ / portTIMER_FOSC_SCALE ) / configTICK_RATE_HZ );
    unsigned long ulCompareValue;
    unsigned char ucByte;

    /* Interrupts are disabled when this function is called.

    Setup CCP1 to provide the tick interrupt using a compare match on timer
    1.

    Clear the time count then setup timer. */
    TMR1H = ( unsigned char ) 0x00;
    TMR1L = ( unsigned char ) 0x00;

    /* Set the compare match value. */
    ulCompareValue = ulConstCompareValue;
    CCPR1L = ( unsigned char ) ( ulCompareValue & ( unsigned long ) 0xff );
    ulCompareValue >>= ( unsigned long ) 8;
    CCPR1H = ( unsigned char ) ( ulCompareValue & ( unsigned long ) 0xff );

    CCP1CONbits.CCP1M0 = portBIT_SET;	/*< Compare match mode. */
    CCP1CONbits.CCP1M1 = portBIT_SET;	/*< Compare match mode. */
    CCP1CONbits.CCP1M2 = portBIT_CLEAR;	/*< Compare match mode. */
    CCP1CONbits.CCP1M3 = portBIT_SET;	/*< Compare match mode. */
    PIE1bits.CCP1IE = portBIT_SET;		/*< Interrupt enable. */

    /* We are only going to use the global interrupt bit, so set the peripheral
    bit to true. */
    INTCONbits.GIEL = portBIT_SET;

    /* Provided library function for setting up the timer that will produce the
    tick. */
    OpenTimer1( T1_16BIT_RW & T1_SOURCE_INT & T1_PS_1_1 & T1_CCP1_T3_CCP2 );
}
